<resources>
    <string name="app_name">Medicine Reminder</string>

    <string name="time">TIME</string>
    <string name="date"><![CDATA[<DATE>]]></string>
    <string name="enter_medicine_name">Enter medicine name</string>
    <string name="save">SAVE</string>
    <string name="medicine">Medicine</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="todo">TODO</string>
    <string name="time1"><![CDATA[<TIME>]]></string>
    <string name="date1">DATE</string>
    <string name="medicine_reminder">MEDICINE REMINDER</string>

</resources>
