<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/muk"

    tools:context=".Main2Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/in_date"
            android:layout_marginEnd="18dp"
            app:srcCompat="@drawable/cal"
            tools:layout_editor_absoluteX="328dp"
            tools:layout_editor_absoluteY="180dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/in_date"
            android:layout_width="203dp"
            android:layout_height="49dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btn_date"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="81dp"
            android:text="@string/date"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="94dp"
            android:layout_height="47dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="200dp"
            android:background="#0064f0"
            android:text="@string/date1"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_time"
            app:layout_constraintEnd_toStartOf="@+id/in_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/in_time"
            android:layout_width="199dp"
            android:layout_height="42dp"
            android:layout_alignEnd="@+id/in_date"
            android:layout_alignRight="@+id/in_date"
            android:layout_alignTop="@+id/btn_time"
            android:text="@string/time1"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="96dp"
            android:layout_height="46dp"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btn_date"
            android:layout_marginBottom="210dp"
            android:background="#0064f0"
            android:text="@string/time"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/in_time"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/in_date"
            android:layout_alignStart="@+id/in_date"
            android:layout_alignTop="@+id/button2"
            android:ems="10"
            android:hint="@string/enter_medicine_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="180dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/in_time"
            android:layout_alignStart="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/in_time"
            app:srcCompat="@drawable/clock"
            tools:layout_editor_absoluteY="299dp"
            android:layout_alignLeft="@+id/imageView3"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="93dp"
            android:layout_marginEnd="149dp"
            android:background="#F06738"
            android:text="@string/save"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btn_date"
            android:layout_marginTop="77dp"
            android:background="#0064f0"
            android:text="@string/medicine"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_date"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>